# layoutlens

./: .gitignore  README.md  bunfig.toml  package.json  plan.md  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1756238142327-5979b694437a3.mjs
.cursor/rules/: 000-codex.md
.github/workflows/: heatmap.yml
.svelte-kit/: ambient.d.ts  non-ambient.d.ts
.svelte-kit/types/: route_meta_data.json
.svelte-kit/types/src/routes/: $types.d.ts
.svelte-kit/types/src/routes/gallery/: $types.d.ts
plugins/layoutlens-importer/: README.md  package-lock.json  package.json
plugins/layoutlens-importer/src/: main.ts
progress/: 2025-08-26.md  2026-03-10.md
scripts/: screenshot.config.json  screenshot.ts  serve-run.ts
services/figma-microservice/: .dockerignore  .env.example  .gitignore  AUTOMATION_PLAN.md  Dockerfile  README.md  package.json  tsconfig.json
services/figma-microservice/src/: auth.ts  capture.ts  env.ts  figma.ts  index.ts  job-access.ts  job-store.ts  logger.ts  selection.ts  sitemap.ts  types.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: panzoom.d.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/gallery/: +page.svelte
