[package]
name = "layoutlens"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["clock"] }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }


